# Auto-Accompaniment-in-C-

./: CMakeLists.txt  accompaniment.cpp  accompaniment.h  aubio_test.cpp  audio_test.cpp  calc.cpp  fftw_test.cpp  global_config.cpp  global_config.h  main.cpp  miditest1.cpp  numcppExtend.cpp  numcppExtend.h  score_following.cpp  score_following.h
